#
#  Copyright
#

MatrixAbstractLayerdir = @includedir@/MatrixAbstractLayer
MatrixAbstractLayer_HEADERS = \
	configMAL.h					\
	MatrixAbstractLayer.h 				\
	MatrixAbstractLayerBoost.h 			\
	MatrixAbstractLayerDoc.h 			\
	MatrixAbstractLayerSmall.h 			\
	MatrixAbstractLayerSmallMatrix3x3Default.h 	\
	MatrixAbstractLayerSmallMatrix4x4Default.h 	\
	MatrixAbstractLayerSmallVector3Default.h 	\
	MatrixAbstractLayerSmallVector4Default.h 	\
	MatrixAbstractLayerVNL.h 			\
	MatrixAbstractLayerT3D.h			\
	abstract.h					\
	abstractMatrix.h				\
	abstractVector.h				\
	boost.h						\
	boostMacros.h					\
	boostMatrix.h					\
	boostspecific.h					\
	boostSvd.h					\
	boostVector.h					

