#
#  Copyright CNRS-AIST
#  Authors: Olivier Stasse and Florent Lamiraux
#

MatrixAbstractLayerdir = @includedir@/MatrixAbstractLayer
MatrixAbstractLayer_HEADERS = \
	configMAL.h					\
	MatrixAbstractLayer.h 				\
	MatrixAbstractLayerBoost.h 			\
	MatrixAbstractLayerDoc.h 			\
	MatrixAbstractLayerSmall.h 			\
	MatrixAbstractLayerMatrix3x3JrlMath.h		\
	MatrixAbstractLayerMatrix4x4JrlMath.h		\
	MatrixAbstractLayerVector3JrlMath.h		\
	MatrixAbstractLayerVector4JrlMath.h		\
	MatrixAbstractLayerVNL.h 			\
	MatrixAbstractLayerT3D.h			\
	abstract.h					\
	abstractMatrix.h				\
	abstractVector.h				\
	boost.h						\
	boostMacros.h					\
	boostMatrix.h					\
	boostspecific.h					\
	boostSvd.h					\
	boostVector.h					
